Add a form and a display output

--- a/Address.html
+++ b/Address.html
@@ -8,6 +8,23 @@
         <title>Address Book</title>
     </head>
     <body>
+               <h1>Address Book</h1>
 
+  <form id="contactForm">
+    <label for="firstName">First Name:</label>
+    <input type="text" id="firstName" required>
+
+    <label for="lastName">Last Name:</label>
+    <input type="text" id="lastName" required>
+
+    <label for="phoneNumber">Phone Number:</label>
+    <input type="text" id="phoneNumber" required>
+
+    <button type="submit">Add Contact</button>
+  </form>
+
+  <div id="output"></div>
+  
     </body>
+
 </html>
